19990621-11:50 CET Victor Szel <info@szelvesz.hu>
  * source/compiler/harbour.y
    Some old PCODE name changed to new in
    debug_msg messages.

19990621-04:04 CET Victor Szel <info@szelvesz.hu>
  * include/errorapi.h - Some additions, note
    the copyright message at the beginning, as the
    final text gets done, we should put similar header
    to each file.
  ! include/hbsetup.h - USE_GTAPI was mistakenly 
    left defined.
  + include/errorapi.h
    include/error.api
    source/rtl/errorapi.c
    The rest of the ERROR API functions
    implemented.
.   hb_errorRT_BASE() implemented.
  + doc/hdr_tpl.txt - added templates for
    file and function headers.

19990621-01:30 CET Victor Szel <info@szelvesz.hu>
  * whatsnew.txt moved to doc/ directory.
  * doc/hrb.faq renamed to hrb_faq.txt
  + tests/broken/vec1.prg readded.

19990621-00:57 CET Victor Szel <info@szelvesz.hu>
  * include/*.h
    Some code beatifying.
  * include/types.h/_PCOUNT renamed back to PCOUNT
  + IT_MEMOFLAG and IT_MEMO types added to 
    include/extend.h and include/types.h
  * TEST.CH moved from /include to tests/working
  ! include/gt.api - _gtBox double define fixed.
  ! include/extend.api - _param removed since it's
    not standard Clipper.
  ! include/item.api - Fixed obsolete references
    to Array*() functions changed since to hb_array*()
  ! source/rtl/console/hb_setpos() - Fixed one warning.

19990621-00:37 Ryszard Glab <rglab@imid.med.pl>
* config/dos/watcom.cf
 * changed invocation of 'echo' command to overcome problems with
   too small space for environment variables.
   Note also that it is possible that you will have to increase this
   space at DOS startup (for example add 
   SHELL=c:\command.com c:\ /E:2048 /P 
   to config.sys)
 * removed some variables that can be expanded directly

* config/dos/global.cf
 * all '\' are now replaced with '/' in COMSPEC variable to shell from
   make utility succesully
 + added check to not include this file recursively
