@@ -1,1 +1,1 @@
-gcc hbppmain.c hbpp.c table.c -o hbpp.exe
+gcc hbppmain.c hbpp.c table.c -I..\..\include -o hbpp.exe
