@@ -3,7 +3,7 @@
 PROJECT: hbpp.exe
 
 hbpp.exe : hbpp.c harb.c table.c
-   bcc -ml hbppmain.c hbpp.c table.c
+   bcc -ml -I..\..\include hbppmain.c hbpp.c table.c
    del hbppmain.obj
    del hbpp.obj
    del table.obj
