@@ -3,7 +3,7 @@
 PROJECT: hbpp.exe
 
 hbpp.exe : hbppmain.c hbpp.c table.c
-   bcc32  -O2  hbppmain.c hbpp.c table.c
+   bcc32  -O2 -ehbpp.exe -I..\..\include hbppmain.c hbpp.c table.c
    del hbppmain.obj
    del hbpp.obj
    del table.obj
